--- a/HTML-CSS/20230303/practice.css
+++ b/HTML-CSS/20230303/practice.css
@@ -8,7 +8,7 @@ div {
   width: 125px;
   margin: 10px;
 
-  padding: 10px;
+  padding: 1.0rem;
   color: white;
 
   text-align: center;
@@ -18,9 +18,9 @@ div {
 }
 
 div:nth-child(1) {
-  border-top: 2px solid #4a5568;
-  border-left: 2px solid #4a5568;
-  outline: 2px solid #000;
+  border-top: 4px solid #4a5568;
+  border-left: 4px solid #4a5568;
+  outline: 4px solid #000;
   background: #343f50;
 }
 
@@ -30,7 +30,7 @@ div:nth-child(2) {
   background: rgb(2, 0, 36);
   background: linear-gradient(
     90deg,
-    rgb(45, 44, 70) 0%,
+    rgb(44, 39, 184) 0%,
     rgba(57, 57, 207, 1) 22%,
     rgba(0, 212, 255, 1) 100%
   );
@@ -38,7 +38,7 @@ div:nth-child(2) {
 
 div:nth-child(3) {
   color: #4a5568;
-  border: 1px solid #4a556883;
+  border: 2px solid #4a556883;
   border-radius: 0 50px 50px 50px;
   box-shadow: 1px 1px 5px gray;
 }
