--- a/HTML-CSS/20230309/card-float/css/card.css
+++ b/HTML-CSS/20230309/card-float/css/card.css
@@ -65,32 +65,48 @@ body {
   font-weight: bold;
 }
 
-.flex-container {
+.float-container {
   width: min(1224px, 100% - 60px);
-  display: flex;
   margin: auto;
-  padding: 24px;
-  gap: 32px 24px;
-  flex-wrap: wrap;
 }
 
-.flex-container article {
+.float-container::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.float-container article {
+  float: left;
   width: calc((100% - (24px * 3)) / 4);
+  margin: 0 0 32px 24px;
+}
+
+@media (min-width: 1025px) {
+  .float-container article:nth-child(4n - 3) {
+    margin-left: 0;
+  }
 }
 
 @media (min-width: 641px) and (max-width: 1024px) {
-  .flex-container article {
+  .float-container article {
     width: calc((100% - (24px * 2)) / 3);
+  }
+  .float-container article:nth-child(3n - 2) {
+    margin-left: 0;
   }
 }
 
 @media (min-width: 501px) and (max-width: 640px) {
-  .flex-container article {
+  .float-container article {
     width: calc((100% - 24px) / 2);
+  }
+  .float-container article:nth-child(2n - 1) {
+    margin-left: 0;
   }
 }
 @media (max-width: 500px) {
-  .flex-container article {
+  .float-container article {
     width: 100%;
+    margin-left: 0;
   }
 }
