정글시네마 실습

--- a/HTML-CSS/20230320/cinema/style/style.css
+++ b/HTML-CSS/20230320/cinema/style/style.css
@@ -149,6 +149,7 @@ header nav ul li button.active {
   border-radius: 10px;
   aspect-ratio: 180 / 250;
   object-fit: cover;
+  box-sizing: border-box;
 }
 
 .card ul {
