--- a/HTML-CSS/20230320/cinema/style/style.css
+++ b/HTML-CSS/20230320/cinema/style/style.css
@@ -230,8 +230,9 @@ header nav ul li button.active {
 /* footer */
 footer {
   width: 100%;
-  height: 213px;
+  height: 228px;
   background-color: #f2f2f2;
+  box-sizing: border-box;
 }
 
 .wrapper.foot {
@@ -245,6 +246,7 @@ footer {
   justify-content: space-between;
   border-bottom: 1px solid #bdbdbd;
   padding-bottom: 42px;
+  margin-bottom: 38px;
 }
 
 .footer-top h2 {
@@ -257,7 +259,6 @@ footer {
 }
 
 .footer-bottom {
-  margin-top: 38px;
   display: flex;
   justify-content: space-between;
   color: #4f4f4f;
