--- a/HTML-CSS/20230321/notice/style.css
+++ b/HTML-CSS/20230321/notice/style.css
@@ -22,6 +22,10 @@ button {
   color: inherit;
 }
 
+img {
+  vertical-align: top;
+}
+
 .a11y-hidden {
   clip: rect(1px, 1px, 1px, 1px);
   clip-path: inset(50%);
