--- a/HTML-CSS/20230322/login.css
+++ b/HTML-CSS/20230322/login.css
@@ -1,17 +1,17 @@
 @font-face {
-  font-family: "SpoqaHanSansNeo-Regular";
-  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SpoqaHanSansNeo-Regular.woff")
-    format("woff");
-  font-weight: normal;
-  font-style: normal;
+    font-family: "SpoqaHanSansNeo-Regular";
+    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SpoqaHanSansNeo-Regular.woff")
+        format("woff");
+    font-weight: normal;
+    font-style: normal;
 }
 
 :root {
-  --err-color: #f4492e;
+    --err-color: #f4492e;
 }
 
 body {
-  font-family: "SpoqaHanSansNeo-Regular";
+    font-family: "SpoqaHanSansNeo-Regular";
 }
 
 /* reset */
@@ -23,241 +23,252 @@ li,
 a,
 fieldset,
 input {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 button {
-  border: 0;
-  background: none;
-  font: inherit;
-  color: inherit;
-  cursor: pointer;
+    border: 0;
+    background: none;
+    font: inherit;
+    color: inherit;
+    cursor: pointer;
 }
 
 a {
-  text-decoration: none;
-  color: inherit;
+    text-decoration: none;
+    color: inherit;
 }
 
 ul,
 li {
-  list-style: none;
+    list-style: none;
 }
 
 fieldset {
-  border: 0;
+    border: 0;
 }
 
 /* txt-hide */
 .txt-hide {
-  position: absolute;
-  clip: rect(0 0 0 0);
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
+    position: absolute;
+    clip: rect(0 0 0 0);
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
 }
 
 /* layout */
 .modal-wrapper {
-  width: 520px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 20px 24px 25px 24px;
-  box-sizing: border-box;
-  border: 1px solid #c4c4c4;
-  border-radius: 10px;
-  color: #767676;
+    width: 520px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px 24px 25px 24px;
+    box-sizing: border-box;
+    border: 1px solid #c4c4c4;
+    border-radius: 10px;
+    color: #767676;
 }
 
 /* h1 */
 .modal-wrapper > h1 {
-  font-weight: 500;
-  font-size: 16px;
-  text-align: center;
-  border-bottom: 1px solid #c4c4c4;
-  padding-bottom: 18px;
-  margin: 0 -24px;
-  color: #000;
+    font-weight: 500;
+    font-size: 16px;
+    text-align: center;
+    border-bottom: 1px solid #c4c4c4;
+    padding-bottom: 18px;
+    margin: 0 -24px;
+    color: #000;
 }
 
 /* login */
 .login {
-  margin-top: 26px;
+    margin-top: 26px;
 }
 
 .login > h2 {
-  font-size: 20px;
-  font-weight: 500;
-  margin-bottom: 24px;
-  color: #000;
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 24px;
+    color: #000;
 }
 
 /* form-login */
 .form-login {
-  width: 100%;
+    width: 100%;
 }
 
 .form-login input:not([type="checkbox"]) {
-  width: 100%;
-  height: 50px;
-  border: 1px solid #c4c4c4;
-  border-radius: 5px;
+    width: 100%;
+    height: 50px;
+    border: 1px solid #c4c4c4;
+    border-radius: 5px;
 }
 
 .form-login input:not([type="checkbox"])::placeholder {
-  font-size: 16px;
+    font-size: 16px;
 }
 
 .input-id,
 .input-pw {
-  padding-left: 16px;
-  margin-bottom: 10px;
+    padding-left: 16px;
+    margin-bottom: 10px;
 }
 
 .form-login .input-id:placeholder-shown {
-  border: 2px solid #f4492e;
+    border: 2px solid #f4492e;
 }
 
 .form-login .input-id:placeholder-shown ~ .err-txt {
-  display: block;
+    display: block;
 }
 
 .form-login .input-pw:placeholder-shown ~ .err-txt {
-  display: block;
+    display: block;
 }
 
 /* err-txt */
 .err-txt {
-  display: none;
-  color: var(--err-color);
-  margin-top: -4px;
-  margin-bottom: 10px;
-  font-size: 14px;
-  padding-left: 4px;
+    display: none;
+    color: var(--err-color);
+    margin-top: -4px;
+    margin-bottom: 10px;
+    font-size: 14px;
+    padding-left: 4px;
 }
 
 .form-login .chk-label {
-  display: inline-block;
-  height: 22px;
-  margin-bottom: 21px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
+    display: inline-block;
+    height: 22px;
+    margin-bottom: 21px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
 
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .form-login .chk-label::before {
-  display: inline-block;
-  content: "";
-  width: 22px;
-  height: 22px;
-  margin-right: 8px;
-  vertical-align: -6px;
-  background-image: url("./img/check-box-blank.svg");
-  transition: all 0.1s;
+    display: inline-block;
+    content: "";
+    width: 22px;
+    height: 22px;
+    margin-right: 8px;
+    vertical-align: -6px;
+    /* background-image: url("./img/check-box-blank.svg"); */
+    background: url("./img/css_sprites.png") -10px -10px;
 }
 
 .form-login .input-chk:focus-visible + .chk-label::before {
-  outline: 2px solid #000;
-  outline-offset: 5px;
+    outline: 2px solid #000;
+    outline-offset: 5px;
 }
 
 .form-login .input-chk:checked + .chk-label::before {
-  background-image: url("./img/check-box-checked.svg");
+    /* background-image: url("./img/check-box-checked.svg"); */
+    background: url("./img/css_sprites.png") -52px -10px;
 }
 
 .btn-login {
-  background: #2f80ed;
-  border-radius: 5px;
-  color: #fff;
-  width: 100%;
-  height: 50px;
-  font-weight: 700;
-  font-size: 18px;
-  margin-bottom: 20px;
+    background: #2f80ed;
+    border-radius: 5px;
+    color: #fff;
+    width: 100%;
+    height: 50px;
+    font-weight: 700;
+    font-size: 18px;
+    margin-bottom: 20px;
 }
 
 .link {
-  text-align: center;
-  font-size: 14px;
-  font-weight: 400;
-  margin-bottom: 68px;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 400;
+    margin-bottom: 68px;
 }
 
 .link-join:hover,
 .link-find:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 .link-join::after {
-  content: "|";
-  margin: 0 12px;
+    content: "|";
+    margin: 0 12px;
 }
 
 /* sns-login */
 .sns-login {
-  position: relative;
+    position: relative;
 }
 
 .sns-login::before {
-  content: "";
-  position: absolute;
-  top: -28px;
-  width: 100%;
-  border: 1px solid #c4c4c4;
+    content: "";
+    position: absolute;
+    top: -28px;
+    width: 100%;
+    border: 1px solid #c4c4c4;
 }
 
 .sns-login::after {
-  content: "또는";
-  position: absolute;
-  top: -37px;
-  left: 50%;
-  transform: translateX(-50%);
-  text-align: center;
-  font-size: 14px;
-  width: 50px;
-  background-color: #fff;
+    content: "또는";
+    position: absolute;
+    top: -37px;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    font-size: 14px;
+    width: 50px;
+    background-color: #fff;
 }
 
 .sns-lists li + li {
-  margin-top: 10px;
+    margin-top: 10px;
 }
 
 .sns-login-btn {
-  width: 100%;
-  padding: 15px 0;
-  border: 1px solid;
-  background: no-repeat 12px 50%;
-  border-radius: 5px;
-  font-weight: 500;
-  transition: transform 0.2s;
+    width: 100%;
+    padding: 15px 0;
+    border: 1px solid;
+    /* background: no-repeat 12px 50%; */
+    border-radius: 5px;
+    font-weight: 500;
+    transition: transform 0.2s;
 }
 
 .sns-login-btn:hover {
-  transform: translate(-2px, -2px);
+    transform: translate(-2px, -2px);
 }
 
 .google {
-  background-image: url(./img/google-logo.svg);
-  border-color: #343434;
+    /* background-image: url(./img/google-logo.svg); */
+    background: url("./img/logo_sprites.png") no-repeat -5px -2px;
+    border-color: #343434;
 }
 
 .facebook {
-  background-image: url(./img/facebook-logo.svg);
-  border-color: #2d9cdb;
+    /* background-image: url(./img/facebook-logo.svg); */
+    background: url("./img/logo_sprites.png") no-repeat -5px -60px;
+    border-color: #2d9cdb;
 }
 
 .naver {
-  background-image: url(./img/naver-logo.svg);
-  border-color: #00bf18;
+    /* background-image: url(./img/naver-logo.svg); */
+    background: url("./img/logo_sprites.png") no-repeat -5px -118px;
+    border-color: #00bf18;
 }
 
 .kakao {
-  background-image: url(./img/kakao-logo.svg);
-  border-color: #f2c94c;
+    /* background-image: url(./img/kakao-logo.svg); */
+    background: url("./img/logo_sprites.png") no-repeat -5px -176px;
+    border-color: #f2c94c;
+}
+
+.modal-close {
+    position: absolute;
+    top: 22px;
+    right: 22px;
 }
