--- a/Firebase/mydiary/src/pages/home/Home.module.css
+++ b/Firebase/mydiary/src/pages/home/Home.module.css
@@ -116,6 +116,10 @@ h3 {
   box-sizing: border-box;
 }
 
+.container section {
+  flex: 1;
+}
+
 @media (max-width: 1024px) {
   .container {
     flex-direction: column;
